arrumei comentário escrito errado

--- a/Desafios/Desafio-cordel/estilo/style.css
+++ b/Desafios/Desafio-cordel/estilo/style.css
@@ -38,7 +38,7 @@ header a:hover, footer a:hover{
 section{
     padding-top: 10vh;
     padding-bottom: 10vh;
-    line-height: 2em;/*Causa um espaçamento entre as frazes*/
+    line-height: 2em;/*Causa um espaçamento entre as frazses*/
     padding-left: 30px;
 }
 
