--- a/Desafios/Desafio-cordel/estilo/style.css
+++ b/Desafios/Desafio-cordel/estilo/style.css
@@ -31,7 +31,7 @@ header{
 
 header > h1{
     padding-top: 50px; 
-    font-variant: small-caps;/*Tambem Deixa a letra maiuscula->text-transform: uppercase;*/
+    font-variant: small-caps;/*Também Deixa a letra maiuscula->text-transform: uppercase;*/
     font-family: var(--fonte2);
     font-size: 10vw;
 }
@@ -51,12 +51,16 @@ header a:hover, footer a:hover{
 }
 
 section{
-    padding-top: 10vh;
-    padding-bottom: 10vh;
-    line-height: 2em;/*Causa um espaçamento entre as frazses*/
+    padding-top: 15vh;
+    padding-bottom: 15vh;
+    line-height: 2em;/*Causa um espaçamento entre as frases*/
     padding-left: 30px;
     font-family: var(--fonte3);
     font-size: 3.5vw;
+}
+
+section>p{
+    padding-bottom: 2em;
 }
 
 section.normal{
@@ -67,13 +71,25 @@ section.normal{
 section.imagem{
     background-color: rgb(49, 49, 49);
     color: white;
+    box-shadow: inset 6px 6px 20px 0px rgba(0, 0, 0, 0.507); 
+    background-size: cover;
+    background-attachment: fixed;/*Fixa a imagem quando utilizar o rolamento causando efeito Parallax*/
 }
 
 section.imagem > p{
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.205);
+    background-color: rgba(0, 0, 0, 0.425);
+    text-shadow: 1px 1px 0px black;
+}
 
+section#img01{
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+}
+
+section#img02{
+    background-image: url(../imagens/background002.jpg);
 }
 
 footer{
